# genalgo

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  TODO.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: AppState.hpp  ArithmeticConcepts.hpp  Color.hpp  CudaFitnessEngine.cu  CudaFitnessEngine.hpp  CudaGLHelper.cu  CudaGLHelper.hpp  DrawableTexture.cpp  DrawableTexture.hpp  FitnessEngine.cpp  FitnessEngine.hpp  GLFitnessEngine.cpp  GLFitnessEngine.hpp  GLStateManager.cpp  GLStateManager.hpp  GlobalConfig.cpp  GlobalConfig.hpp  Image.cpp  Image.hpp  Individual.cpp  Individual.hpp  JSONDeserializer.cpp  JSONDeserializer.hpp  JSONSerializer.cpp  JSONSerializer.hpp  MTFitnessEngine.cpp  MTFitnessEngine.hpp  Point.hpp  PoorProfiler.cpp  PoorProfiler.hpp  Population.cpp  Population.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  STFitnessEngine.cpp  STFitnessEngine.hpp  Shader.cpp  Shader.hpp  SignalHandler.cpp  SignalHandler.hpp  (+12 more)
src/JSONDeserializer/: fwd.hpp  vector_deserializer.hpp
src/JSONSerializer/: fwd.hpp  vector_serializer.hpp
src/shaders/: individuals.frag  individuals.vert  shader.frag  shader.vert
